fixed contant-tab horizontal scrolli viewing.

--- a/src/components/content-tab/content-tab.css
+++ b/src/components/content-tab/content-tab.css
@@ -1,14 +1,33 @@
 .pageBarList{
     width:100%;
-    height:100%; 
-    overflow: auto;
-    white-space: nowrap; 
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    height:70px;
+    overflow: overlay;
+    overflow-y: hidden;
+    white-space: nowrap;
+    padding-bottom: -20px;
+    /*-ms-overflow-style: none;   IE and Edge */
+    /*scrollbar-width: none;  /* Firefox */
 }
-/* Hide scrollbar for Chrome, Safari and Opera */
+
+ /* Hide scrollbar for Chrome, Safari and Opera */
 .pageBarList::-webkit-scrollbar {
-    display: none;
+    height: 24px;
+}
+  
+/* Track */
+.pageBarList::-webkit-scrollbar-track {
+    background: transparent; 
+}
+   
+/* Handle */
+.pageBarList::-webkit-scrollbar-thumb {
+    background: #8888885e;
+}
+  
+/* Handle on hover */
+.pageBarList::-webkit-scrollbar-thumb:hover {
+    background: #ffffff8c; 
+    cursor: pointer;
 }
 
 .pageBarItem{
